2006-11-12  Daniel Wagner  <wagi@newton.monom.org>

	* basic function block AV/C commands added.
	test program for setting the volume added.

2006-11-11  Daniel Wagner  <wagi@newton.monom.org>

	* src/bebob/bebob_avdevice.cpp (setSamplingFrequencyPlug): copy past
	error fixed. Reported by Jamie Gennis jgennis at gmail dot com

2006-08-27  Daniel Wagner  <wagi@monom.org>

	* configure.ac: Version set to 1.4.0
	* maudio device support infrastructure added. Implements
	IAvDevice interface, discover reads the information from
	an xml file. 

2006-08-22  Daniel Wagner  <wagi@monom.org>

	* configure.ac: Version bump to 1.3.0
	* freebob_sync allows now to set the sync mode. It does not
	check yet if it really could set the mode.

2006-07-17  Daniel Wagner  <wagi@monom.org>

	* configure.ac: Version bump to 1.2.0
	* freebob_sync program added
	* Basic interface added for sync info

2006-07-02  Daniel Wagner  <wagi@monom.org>

	* firmware downloader: check device firmware compatibility

2006-06-27  Daniel Wagner  <wagi@monom.org>

	* configure.ac: Version bump to 1.1.0
	* remove bebob_light code
	* downloader various improvements
	* ConfigRom::isAvcDevice() removed. Device probe code added. 
	Each device driver class can check if it supports a device.

2006-06-24  Daniel Wagner  <wagi@monom.org>

	* tests/streaming/Makefile.am: Fixed build problem with missing '/'.

2006-06-21  Daniel Wagner  <wagi@monom.org>

	* freebob-downloader first version added

2006-06-10  Daniel Wagner  <wagi@monom.org>

	* Changed building rules: No static sub libraries
	are build anymore.

2006-06-01  Daniel Wagner  <wagi@monom.org>

	* configure.ac: Version bump to 1.0.0

	* Changed all FreeBob to FreeBoB
	* Removed all .cvsignore
	* Added Pieter to AUTHORS
	* Updated NEWS and README (release canditate date added)

2006-05-31  Daniel Wagner  <wagi@monom.org>

	* Free all allocated asprintf buffers after xmlNewChild.
	Compiler warning removed
