@@ -20,7 +20,8 @@ SUBDIRS = streaming
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src $(LIBXML_CFLAGS) \
 	$(LIBAVC1394_CFLAGS)
 
-noinst_PROGRAMS = test-freebob test-extplugcmd test-fw410 freebob-server test-volume
+noinst_PROGRAMS = test-freebob test-extplugcmd test-fw410 freebob-server \
+	test-volume test-mixer
 noinst_HEADERS = 
 
 test_freebob_SOURCES = test-freebob.c
@@ -33,6 +34,10 @@ test_extplugcmd_LDADD = $(top_builddir)/src/libfreebob.la \
 
 test_volume_SOURCES = test-volume.cpp
 test_volume_LDADD = $(top_builddir)/src/libfreebob.la \
+	$(LIBAVC1394_LIBS)
+
+test_mixer_SOURCES = test-mixer.cpp
+test_mixer_LDADD = $(top_builddir)/src/libfreebob.la \
 	$(LIBAVC1394_LIBS)
 
 test_fw410_SOURCES = test-fw410.cpp
